Add semantic elements to html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 
-  <div class="order-summary-card">
+  <main class="order-summary-card">
 
     <img class="plan-img" src="images/illustration-hero.svg"
       alt="woman dancing with headphones in front of city skyline">
@@ -42,11 +42,12 @@
       <button class="cancel">Cancel Order</button>
 
     </div>
-  </div>
+  </main>
 
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/KatieB4" target="_blank">Katie 🌯</a>
+  </footer>
 
 </body>
 
