Change images to relative paths

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <main class="order-summary-card">
 
-    <img class="plan-img" src="/images/illustration-hero.svg"
+    <img class="plan-img" src="images/illustration-hero.svg"
       alt="woman dancing with headphones in front of city skyline">
 
     <div class="info-box">
@@ -30,7 +30,7 @@
         anywhere you like!</p>
 
       <div class="plan-selected-box">
-        <span><img class="plan-icon" src="/images/icon-music.svg" alt="music note icon"></span>
+        <span><img class="plan-icon" src="images/icon-music.svg" alt="music note icon"></span>
         <div class="price-box">
           <h2 class="plan-selected">Annual Plan</h2>
           <p class="plan-price">$59.99/year</p>
