--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="..images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
@@ -30,7 +30,7 @@
         anywhere you like!</p>
 
       <div class="plan-selected-box">
-        <span><img class="plan-icon" src="https://KatieB4.github.io/Order-Summary-Card--Frontend-Mentor/images/icon-music.svg" alt="music note icon"></span>
+        <span><img class="plan-icon" src="..images/icon-music.svg" alt="music note icon"></span>
         <div class="price-box">
           <h2 class="plan-selected">Annual Plan</h2>
           <p class="plan-price">$59.99/year</p>
